feat: add deposit api
